SSC-XX fix regression du to SSC-1791, icon alignment

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-general.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-general.less
@@ -222,4 +222,13 @@
             opacity: 1;
         }
     }
+
+    .btn.btn-thin {
+        padding: 8px 20px;
+
+        i {
+            position: relative;
+            bottom: -1px;
+        }
+    }
 }
