--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-bootstrap-3-3-7/less/buttons-custom.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-bootstrap-3-3-7/less/buttons-custom.less
@@ -24,7 +24,6 @@
 
     i {
         margin-left: 12px;
-        float: right;
     }
 
     &, &:active, &.active {
